Values added